--- a/Java_BaiTapLon/src/main/resources/com/baokhiem/java_baitaplon/FXMLQuanLyVe.fxml
+++ b/Java_BaiTapLon/src/main/resources/com/baokhiem/java_baitaplon/FXMLQuanLyVe.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" tabClosingPolicy="UNAVAILABLE" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/19">
+<TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.baokhiem.java_baitaplon.FXMLQuanLyVeController">
   <tabs>
     <Tab text="Dat Ve">
       <content>
